--- a/plugin.xml
+++ b/plugin.xml
@@ -13,8 +13,15 @@
 
     <!-- ios -->
     <platform name="ios">
+        <!-- Cordova 2.2.0 -->
         <plugins-plist key="Keychain"
                     string="CDVKeychain" />
+                    
+        <!-- Cordova 2.3.0 -->
+        <config-file target="config.xml" parent="/cordova/plugins">
+                <plugin name="Keychain"
+                    value="CDVKeychain"/>
+        </config-file>
 
         <!-- Note: the ios src is based off src/ios implicitly --> 
         <header-file src="CDVKeychain.h" />
