Updated plugin.xml for Cordova 2.5.0 config.xml <widget> root element

--- a/plugin.xml
+++ b/plugin.xml
@@ -16,9 +16,13 @@
         <!-- Cordova 2.2.0 -->
         <plugins-plist key="Keychain"
                     string="CDVKeychain" />
-                    
-        <!-- Cordova 2.3.0 -->
+               
+        <!-- use this tag for Cordova 2.3.0, 2.4.0 -->
+        <!--
         <config-file target="config.xml" parent="/cordova/plugins">
+        -->
+        <!-- Cordova 2.5.0 -->
+        <config-file target="config.xml" parent="/widget/plugins">
                 <plugin name="Keychain"
                     value="CDVKeychain"/>
         </config-file>
