--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-    id="com.shazron.cordova.keychain"
+    id="com.shazron.cordova.keychainutil"
     version="1.0.0">
 
     <name>iOS KeyChain</name>
@@ -16,24 +16,15 @@
         <!-- Only for Cordova 2.2.0 -->
         <plugins-plist key="Keychain" string="CDVKeychain" />
                
-        <!-- Only for Cordova 2.3.0, 2.4.0 -->
-        <!--
-        <config-file target="config.xml" parent="/cordova/plugins">
-            <plugin name="Keychain" value="CDVKeychain"/>
-        </config-file>
-        -->
-
-        <!-- Only for Cordova >= 2.5.0 -->
-        <config-file target="config.xml" parent="/widget/plugins">
+        <config-file target="config.xml" parent="/*/plugins">
             <plugin name="Keychain" value="CDVKeychain"/>
         </config-file>
 
-        <!-- Note: the ios src is based off src/ios implicitly --> 
-        <header-file src="CDVKeychain.h" target-dir="Keychain"/>
-        <header-file src="SFHFKeychainUtils/SFHFKeychainUtils.h" target-dir="Keychain/SFHFKeychainUtils"/>
+        <header-file src="src/ios/CDVKeychain.h" />
+        <header-file src="src/ios/SFHFKeychainUtils/SFHFKeychainUtils.h"/>
         
-        <source-file src="CDVKeychain.m" target-dir="Keychain" />
-        <source-file src="SFHFKeychainUtils/SFHFKeychainUtils.m" target-dir="Keychain/SFHFKeychainUtils" />
+        <source-file src="src/ios/CDVKeychain.m"/>
+        <source-file src="src/ios/SFHFKeychainUtils/SFHFKeychainUtils.m" />
         
         <framework src="Security.framework" />
     </platform>
