Add <description> in plugin.xml

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,8 @@
     id="com.shazron.cordova.plugin.keychainutil"
     version="1.0.0">
 
-    <name>iOS KeyChain</name>
+    <name>KeyChain Plugin for Cordova iOS</name>
+    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</name>
 	
     <engines>
         <engine name="cordova" version=">=2.2.0" />
