--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
     version="1.0.0">
 
     <name>KeyChain Plugin for Cordova iOS</name>
-    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</name>
+    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</description>
 	
     <engines>
         <engine name="cordova" version=">=2.2.0" />
