--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,9 @@
 
     <name>KeyChain Plugin for Cordova iOS</name>
     <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</description>
-	
+    <license>Apache 2.0</license>
+    <keywords>keychain</keywords>	
+    
     <engines>
         <engine name="cordova" version=">=2.2.0" />
     </engines>
